DIG-9802: Mothercare brand theming for online returns.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -9,6 +9,12 @@
     }
   }
 
+  .order-details-button-wrapper {
+    a {
+      text-transform: uppercase;
+    }
+  }
+
   .whats-next-section,
   .return-details-section,
   .return-items-wrapper {
