--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-request.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-request.scss
@@ -23,4 +23,13 @@
       }
     }
   }
+
+  .confirm-return-button-wrapper,
+  .continue-button-wrapper {
+    button {
+      span {
+        text-transform: uppercase;
+      }
+    }
+  }
 }
