--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -839,6 +839,14 @@ $egift-accordion-bg: $primary_bg;
 // Online Returns
 $online-return-eligibility-button-txt: $hnm-black-three;
 $online-return-dark-txt: $hnm-black-three;
+$online-return-dark-bg: $hnm-black-three;
+$online-return-button-bg: $hnm-black-three;
+$online-return-refund-grey-txt: $grey11;
+$online-return-refund-blue-txt: $_tooltip_blue;
+$online-return-confirmation-note-txt: $grey11;
+$online-return-confirmation-border: $hnm-black-three;
+$online-return-light-bg: $_white-four;
+$online-return-cancel-button-border: $grey4;
 
 // Hello Member membership success popup
 $hm-membership-success-popup-bg: $white-linen;
