--- a/docroot/themes/custom/transac/alshaya_mothercare/sass/_brand-feature-override.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/sass/_brand-feature-override.scss
@@ -3,3 +3,4 @@
 // All styles and modules from whitelabel.
 @import "../../alshaya_white_label/sass/_brand-feature.scss";
 @import "config/colors";
+@import "utils";
