--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-eligibility.scss
@@ -147,7 +147,7 @@
         font-size: 0.75rem;
         color: $online-return-eligibility-button-txt;
         text-transform: uppercase;
-        font-family: $alshaya-thin;
+        font-family: $alshaya-bold;
         line-height: 1.33;
 
         @include breakpoint($only-mobile) {
