--- a/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_colors.scss
@@ -17,3 +17,8 @@ $menu-chevron: $marine-blue-two;
 
 // eGift landing page.
 $egift-accordion-active-title: $marine-blue-two;
+
+// Online returns
+$online-returns-confirmation-blue-title-txt: $marine-blue;
+$online-returns-confirmation-blue-subtitle-txt: $marine-blue-two;
+$online-return-confirmation-mot-grey-border: $warm-grey-two;
