CORE-43045: otp and redeem points UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
@@ -120,6 +120,14 @@
           }
         }
       }
+
+      .Collapsible {
+        width: 96%;
+
+        @include breakpoint($only-mobile) {
+          width: 100%;
+        }
+      }
     }
   }
 
