CORE-43045: otp and redeem points UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
@@ -221,6 +221,12 @@
           cursor: pointer;
         }
       }
+
+      .loyalty-options-guest {
+        .loyalty-option {
+          padding-#{$left}: rem(20);
+        }
+      }
     }
   }
 }
