--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -12,6 +12,12 @@
         line-height: normal;
       }
     }
+
+    .hm-benefit-status-info {
+      #status-msg {
+        font-family: $hnm-demibold;
+      }
+    }
   }
 
   .expire-on {
