--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-info-page/component/_faq.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-info-page/component/_faq.scss
@@ -68,8 +68,7 @@
 
       @include breakpoint($tablet) {
         margin: 0;
-        padding-left: 0;
-        padding-right: 0;
+        padding: 0;
       }
     }
   }
