CORE-43558: Added tag attributes dynamically.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
@@ -25,7 +25,7 @@
 {{#*inline "menuItem"}}
   <li class="menu__list-item menu--two__list-item {{ level_class }} {{ move_to_right }}">
     <div class="menu__link-wrapper menu-two__link-wrapper">
-      <{{ this.tag }} class="menu__link menu-two__link {{ level_class }} sub-nav-{{cleanCssIdentifier @root.sub_nav_name }}" gtm-menu-title="{{ this.name }}" href="{{ @root.path_prefix }}{{ this.url_path }}">{{ this.name }}</{{ this.tag }}>
+      <{{ this.tag }} class="menu__link menu-two__link {{ level_class }} sub-nav-{{cleanCssIdentifier @root.sub_nav_name }}" gtm-menu-title="{{ this.name }}" {{{ this.tag_attr }}}>{{ this.name }}</{{ this.tag }}>
     </div>
     {{#if this.children }}
       {{> main_menu_level3_partial name=name items=this.children level_class=level_class }}
