CORE-43614: Removed unused template for Lhn menu.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/handlebars/rcs-lhn_menu.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/handlebars/rcs-lhn_menu.handlebars
@@ -1,15 +1,15 @@
-{{#if this}}
-  <ul>
-    {{#each this as |menuItem|}}
-      <li>
-        {{! Render link if its clickable.}}
-        {{#if menuItem.clickable}}
-          <a href="{{menuItem.url}}" class="lhn-{{menuItem.level}} {{menuItem.active}}">{{menuItem.name}}</a>
-        {{else}}
-          <span class="lhn-{{menuItem.level}} {{menuItem.active}}">{{menuItem.name}}</span>
-        {{/if}}
+<ul>
+  {{#each this as |menuItem|}}
+    <li>
+      {{! Render link if its clickable.}}
+      {{#if menuItem.clickable}}
+        <a href="{{menuItem.url}}" class="lhn-{{menuItem.level}} {{menuItem.active}}">{{menuItem.name}}</a>
+      {{else}}
+        <span class="lhn-{{menuItem.level}} {{menuItem.active}}">{{menuItem.name}}</span>
+      {{/if}}
+      {{#if menuItem.child}}
         {{{render 'lhn_menu' menuItem.child}}}
-      </li>
-    {{/each}}
-  </ul>
-{{/if}}
+      {{/if}}
+    </li>
+  {{/each}}
+</ul>
