CORE-43558: Added overridden link class.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
@@ -31,6 +31,9 @@
         {{ addStyle 'level1_style' 'background-color' background_color }}
         {{ addClass 'level1_class' 'has-bg-color' }}
       {{/if}}
+      {{#if overridden_path}}
+        {{ addClass 'level1_class' 'overridden-link' }}
+      {{/if}}
       {{#if font_color }}
         {{ addStyle 'level1_style' 'color' font_color }}
       {{/if}}
