--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level4-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level4-partial.handlebars
@@ -3,9 +3,13 @@
   <div class="level-four__wrapper">
     <span class="back--link"><span class="menu__back"></span> <span>{{ name }}</span></span>
     {{#each items as |menu_item|}}
-      <li class="menu__list-item menu--four__list-item {{ level_class }}">
+      {{ addClass 'level4_class' '' }}
+      {{#if menu_item.overridden_path}}
+        {{ addClass 'level4_class' 'overridden-link' }}
+      {{/if}}
+      <li class="menu__list-item menu--four__list-item {{ @root.level4_class }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
-          <{{@menu_item.tag}} class="menu__link menu--three__link {{ level_class }}" style="{{@root.style}}" title="{{ menu_item.name }}" gtm-menu-title="{{ menu_item.name }}" {{{ menu_item.tag_attr }}}>{{ menu_item.name }}</{{@menu_item.tag}}>
+          <{{@menu_item.tag}} class="menu__link menu--three__link {{ @root.level4_class }}" style="{{@root.style}}" title="{{ menu_item.name }}" gtm-menu-title="{{ menu_item.name }}" {{{ menu_item.tag_attr }}}>{{ menu_item.name }}</{{@menu_item.tag}}>
         </div>
       </li>
     {{/each}}
