--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-otp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-otp.scss
@@ -81,6 +81,7 @@
           min-width: rem(99);
           text-align: center;
           font-family: $aura-bold;
+          cursor: pointer;
         }
       }
 
@@ -98,6 +99,7 @@
         .resend-otp {
           text-decoration: underline;
           color: $aura-cart-points;
+          cursor: pointer;
 
           @include breakpoint($only-mobile) {
             font-size: rem(12);
