--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -1,73 +1,128 @@
 .spc-hello-member-checkout-rewards-block {
-  .spc-aura-link-card-form {
-    color: $aura-spc-checkout-text-content;
+  .loyalty-options-registered,
+  .loyalty-options-guest {
+    .spc-aura-link-card-form {
+      color: $aura-spc-checkout-text-content;
 
-    .customer-points {
-      .aura-points-info {
-        border-radius: rem(10);
-        background: $aura-gradient-21;
-        padding: rem(14) rem(20);
-        font-family: $aura-regular;
+      .customer-points {
+        .aura-points-info {
+          border-radius: rem(10);
+          background: $aura-gradient-21;
+          padding: rem(14) rem(20);
+          font-family: $aura-regular;
 
-        html[lang=ar] & {
-          background: $aura-gradient-21-ar;
+          html[lang=ar] & {
+            background: $aura-gradient-21-ar;
+          }
+        }
+
+        .spc-aura-highlight,
+        .spc-aura-points-expiry-item b {
+          font-family: $aura-bold;
+          font-weight: normal;
+          padding: 0 rem(4);
+          color: $aura-highlight;
         }
       }
 
-      .spc-aura-highlight,
-      .spc-aura-points-expiry-item b {
+      .aura-redeem-points {
         font-family: $aura-bold;
-        font-weight: normal;
-        padding: 0 rem(4);
-        color: $aura-highlight;
+        display: flex;
+        align-items: center;
+        margin-top: rem(30);
+        justify-content: space-between;
+
+        @include breakpoint($only-mobile) {
+          margin-#{$right}: rem(3);
+        }
+
+        .spc-aura-button {
+          border: rem(1) solid $aura-spc-button-text;
+          background: $aura-spc-button-bg;
+          color: $aura-spc-button-text;
+          font-size: rem(13);
+          border-radius: rem(4);
+          height: rem(36);
+          min-width: rem(171);
+        }
       }
     }
 
-    .aura-redeem-points {
-      font-family: $aura-bold;
-      display: flex;
-      align-items: center;
-      margin-top: rem(30);
-      justify-content: space-between;
+    .aura-earned-points {
+      padding-#{$left}: rem(48);
+      margin-top: rem(10);
 
-      @include breakpoint($only-mobile) {
-        margin-#{$right}: rem(3);
-      }
+      .points-earned-message {
+        font-size: rem(12);
+        color: $aura-cart-points;
+        font-family: $aura-regular;
 
-      .spc-aura-button {
-        border: rem(1) solid $aura-spc-button-text;
-        background: $aura-spc-button-bg;
-        color: $aura-spc-button-text;
-        font-size: rem(13);
-        border-radius: rem(4);
-        height: rem(36);
-        min-width: rem(171);
+        &::before {
+          content: '!';
+          color: $aura-spc-checkout-block-bg;
+          background-color: $aura-cart-points;
+          border-radius: 50%;
+          padding: 0 rem(6);
+          font-size: rem(12);
+          display: inline-flex;
+          margin-#{$right}: rem(8);
+        }
+
+        b {
+          font-family: $aura-bold;
+        }
       }
     }
   }
 
-  .aura-earned-points {
-    padding-#{$left}: rem(48);
-    margin-top: rem(10);
+  .loyalty-options-guest {
+    .loyalty-option {
+      padding-#{$left}: rem(20);
 
-    .points-earned-message {
-      font-size: rem(12);
-      color: $aura-cart-points;
-      font-family: $aura-regular;
-
-      &::before {
-        content: '!';
-        color: $aura-spc-checkout-block-bg;
-        background-color: $aura-cart-points;
-        border-radius: 50%;
-        padding: 0 rem(6);
-        font-size: rem(12);
-        display: inline-flex;
-        margin-#{$right}: rem(8);
+      .customer-points {
+        font-size: rem(14);
       }
 
-      b {
-        font-family: $aura-bold;
+      .loaylty-option-text {
+        width: 94%;
+
+        @include breakpoint($only-mobile) {
+          width: 96%;
+        }
+
+        .Collapsible {
+          flex-grow: 1;
+        }
+
+        .loaylty-option-text {
+          @include icon('chevrondown') {
+            font-size: rem(8);
+            position: absolute;
+            top: rem(34);
+            #{$right}: rem(24);
+            transform: translateY(-50%);
+            transition: transform 0.125s ease-in-out;
+
+            @include breakpoint($only-mobile) {
+              top: rem(40);
+            }
+          }
+        }
+      }
+
+      &.hello-member-loyalty {
+        .loaylty-option-text {
+          @include breakpoint($only-mobile) {
+            display: block;
+            min-height: rem(30);
+          }
+
+          .hello-member-svg {
+            @include breakpoint($only-mobile) {
+              display: inline-block;
+            }
+          }
+        }
       }
     }
   }
