--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2287,21 +2287,18 @@ $hello-member-qr-code-redeem-txt: $grey-light;
 $hello-member-qr-code-bg: $white-three;
 
 // Hello Member benefit block
-$hm-my-offers-bg: $white-three;
-$hm-my-offers-expiry-txt: $grey-light;
-$hm-promo-pop-txt: $_sofa-section-grey2;
-$hm-promo-tab-title: $_gray_222;
-$hm-promo-tab-border: $warm-grey-two;
-$hm-promo-tab-items-bg: $white-smoke-light;
-$hm-promo-tab-items-border: $egift-gray;
-$hm-promo-btn-bg: $mothercare-black;
-$hm-promo-err-sec-bg: $light-yellow;
-$hm-promo-radio-btn: $mothercare-black;
-$hm-promo-sel-tab-border: rgba(0, 0, 0, 0.24);
-$hm-promo-available-notification-icon: $hm-promo-available-notification;
 $hello-member-my-offers-bg: $white-three;
 $hello-member-my-offers-expiry-txt: $grey-light;
-$hm-promo-available-notification-icon: $error-red;
+$hello-member-promo-pop-txt: $_sofa-section-grey2;
+$hello-member-promo-tab-title: $_gray_222;
+$hello-member-promo-tab-border: $warm-grey-two;
+$hello-member-promo-tab-items-bg: $white-smoke-light;
+$hello-member-promo-tab-items-border: $egift-gray;
+$hello-member-promo-btn-bg: $mothercare-black;
+$hello-member-promo-err-sec-bg: $light-yellow;
+$hello-member-promo-radio-btn: $mothercare-black;
+$hello-member-promo-sel-tab-border: rgba(0, 0, 0, 0.24);
+$hello-member-promo-available-notification-icon: $error-red;
 
 // Hello member history point
 $hello-member-history-points-light-title: $greyish;
