--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-tabs.scss
@@ -3,14 +3,14 @@
     .hm-promo-modal-content {
       .react-tabs__tab-list {
         display: flex;
-        border-bottom: rem(1) solid $hm-promo-tab-border;
+        border-bottom: rem(1) solid $hello-member-promo-tab-border;
         padding: 0;
 
         .react-tabs__tab {
           font-family: $alshaya-thin;
           font-size: rem(16);
           padding: rem(16) 0;
-          color: $hm-promo-tab-title;
+          color: $hello-member-promo-tab-title;
           letter-spacing: 0.8px;
           list-style: none;
           flex: auto;
@@ -19,8 +19,8 @@
           text-align: center;
 
           &--selected {
-            color: $hm-promo-tab-title;
-            border-bottom: rem(1) solid $hm-promo-pop-txt;
+            color: $hello-member-promo-tab-title;
+            border-bottom: rem(1) solid $hello-member-promo-pop-txt;
             font-family: $alshaya-bold;
           }
         }
