--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-request-dropdown.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-request-dropdown.scss
@@ -11,16 +11,17 @@
       }
     }
 
-    .return-qty-row,
-    .return-reasons-row {
-      .return-reason-label {
-        font-family: $hnm-demibold;
-      }
-    }
-
     .reasonsSelect__menu,
     .qtySelect__menu {
       z-index: 5;
+    }
+  }
+
+  .return-qty-row,
+  .return-reasons-row {
+    .return-reason-label {
+      font-family: $hnm-regular;
+      font-weight: 700;
     }
   }
 }
