--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2321,7 +2321,7 @@ $hello-member-loyalty-aura-form-btn: $_aura-disabled;
 $hello-member-loyalty-aura-form-btn-bg: $white-five;
 $hello-member-loyalty-aura-disable-select-bg: $greyish;
 
-// Advanced Page components.
+// Advanced Page components
 $advanced-page-accordion-active-title: $mothercare-black;
 $advanced-page-accordion-bg: $white-four;
 $advanced-page-accordion-title: $mothercare-black;
@@ -2331,7 +2331,11 @@ $advanced-page-banner-title: $_gray_222;
 $advanced-page-button: $_gray_222;
 $advanced-page-button-hover: $button-hover;
 
-// Hello Member Info Page
+// Hello Member components
 $link-borders: $_gray_222;
 $hello-member-components-bg: $grey-shade;
 $hello-member-highlight-text: $primary_text;
+$hello-member-highlight-text-2: $primary_text;
+$hello-member-text-1: $mothercare-black;
+$hello-member-text-2: $black;
+$hello-member-text-3: $white-five;
