CORE-43557: Displayed main menu highlights.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
@@ -52,7 +52,7 @@
           {{/if}}
         </div>
         {{#if menu_item.children }}
-          {{> main_menu_level2_partial name=menu_item.name menu_items=menu_item.children level_class=level_class }}
+          {{> main_menu_level2_partial name=menu_item.name menu_items=menu_item.children level_class=level_class level1_highlights=menu_item.highlight_paragraphs}}
         {{/if}}
       </li>
     {{/each}}
