--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
@@ -19,7 +19,20 @@
       {{/each}}
     {{/if}}
   </div>
-  {{'// @todo CORE-43557: Implement Category image and menu highlights'}}
+  {{#if (or
+          (eq @root.menu_type 'default')
+          (eq @root.menu_type 'menu_dynamic_display')) }}
+    {{#if level1_highlights.text_link_para}}
+      <div class="term-image__wrapper text-link-para">
+    {{else}}
+      <div class="term-image__wrapper">
+    {{/if}}
+      {{!@todo Implement term image}}
+      {{!-- {{ alshaya_main_menu('alshaya_main_menu_category_image', data.l1_object) }} --}}
+      {{!Highlight image starts}}
+      {{{ level1_highlights.markup }}}
+    </div>
+  {{/if}}
 </ul>
 
 {{#*inline "menuItem"}}
