CORE-43742: Become member HM text black PR feedback updates.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -55,7 +55,6 @@ $hnm-black-two: #000;
 $hnm-black-two-50: rgba(0, 0, 0, 0.05);
 $hnm-black-three: #222;
 $hnm-black-four: #1a1a1a;
-$hnm-black-333: #333;
 $hnm-grey: #f3f3f3;
 $returned: #797979;
 $whisper-light-59: rgba(235, 235, 235, 0.59);
@@ -877,4 +876,4 @@ $advanced-page-accordion-bg: $primary_bg;
 $hello-member-components-bg: $white-linen;
 $hello-member-highlight-text: $_hm_global_red;
 $hello-member-highlight-text-2: $hnm-red;
-$hello-member-text-2: $hnm-black-333;
+$hello-member-text-2: $hnm-black-three;
