CORE-42952: Birthday popup for registered hello members.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
@@ -4,6 +4,7 @@
       .happy-birthday-popup-body {
         .title {
           font-family: $hnm-demibold;
+          color: $hello-member-bd-pop-title;
         }
 
         .description {
