--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -877,3 +877,6 @@ $hello-member-components-bg: $white-linen;
 $hello-member-highlight-text: $_hm_global_red;
 $hello-member-highlight-text-2: $hnm-red;
 $hello-member-text-2: $hnm-black-three;
+
+//hello member birthday popup
+$hello-member-bd-pop-title: $_hm_global_red;
