--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_birthday-popup.scss
@@ -48,7 +48,7 @@
           font-size: rem(18);
           font-family: $alshaya-bold;
           letter-spacing: 0.9px;
-          padding: rem(48) 0 rem(10) 0;
+          padding: rem(48) 0 rem(10);
           color: $hello-member-bd-title;
           text-transform: uppercase;
 
