CORE-42936: Added screen loader and tab switch ui.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-list.scss
@@ -1,6 +1,12 @@
 .hello-member-promo-section {
   .hm-promo-modal-content {
     .react-tabs__tab-panel {
+      display: none;
+
+      &.react-tabs__tab-panel--selected {
+        display: block;
+      }
+
       .hm-promo-tab-content-list {
         height: rem(256);
         max-height: rem(256);
