CORE-43045: Added css changes for aura redeem screen.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-tooltip.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-tooltip.scss
@@ -1,4 +1,5 @@
 .spc-order-summary-item.aura-order-summary-item,
+.spc-aura-checkout-messages,
 .spc-aura-checkout-rewards-block .block-content {
   .tooltip-anchor {
     display: inline-block;
