CORE-43558: Also added menu inline display to the condition.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level2-partial.handlebars
@@ -21,7 +21,8 @@
   </div>
   {{#if (or
           (eq @root.menu_type 'default')
-          (eq @root.menu_type 'menu_dynamic_display')) }}
+          (eq @root.menu_type 'menu_dynamic_display')
+          (eq @root.menu_type 'menu_inline_display')) }}
     {{#if level1_highlights.text_link_para}}
       <div class="term-image__wrapper text-link-para">
     {{else}}
